add signup and login completly

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,6 +17,6 @@
     <button
       mat-raised-button
       color="accent"
-      type="submit">LogIn</button>
+      type="submit" *ngIf="!isLoading">LogIn</button>
   </form>
 </mat-card>
