--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -1,24 +1,25 @@
-:host{
+:host {
   display: block;
   margin-top: 1rem;
 }
 
-.info-text{
-  text-align: center;
+mat-spinner {
+  margin: auto;
 }
-mat-paginator{
+
+mat-paginator {
   margin-top: 1rem;
 }
 
-mat-spinner{
-
-  margin: auto;
+.info-text {
+  text-align: center;
 }
-.post-image{
+
+.post-image {
   width: 100%;
 }
 
-.post-image img{
+.post-image img {
   width: 100%;
-  box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
