--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
       <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a mat-button routerLink="/login" routerLinkActive="mat-accent">LogIn</a>
+      <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">LogIn</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a mat-button routerLink="/signup" routerLinkActive="mat-accent">SignUp</a>
+      <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">SignUp</a>
     </li>
     <li *ngIf="userIsAuthenticated">
       <button mat-button (click)="onLogout()">LogOut</button>
